--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 
-<!-- 1° Assignment -->
-<!-- <app-mail-form></app-mail-form> -->
-
-<!-- 2° Assignment -->
-<app-email-reader-form></app-email-reader-form>
+<!--4 assignment-->
+<router-outlet></router-outlet>
