Creation of EmailViewer and EmailsList

--- a/src/app/mail-form/email-form.component.html
+++ b/src/app/mail-form/email-form.component.html
@@ -17,7 +17,7 @@
 </ng-template>
 
 <div class="container">
-    <h1 class="margin-top-20">Email reader, Matteo Fornara 222727</h1>
+    <h1 class="margin-top-20">Email writer form, Matteo Fornara 222727</h1>
     <form>
         <div class="form-group margin-top-20">
           <label>From</label>
