--- a/src/app/mail-form/email-form.component.html
+++ b/src/app/mail-form/email-form.component.html
@@ -16,39 +16,42 @@
   </div>
 </ng-template>
 
-<div class="container">
-    <h1 class="margin-top-20">Email writer form, Matteo Fornara 222727</h1>
-    <form>
-        <div class="form-group margin-top-20">
-          <label>From</label>
-          <input name="from" type="email" class="form-control" placeholder="name@example.com" [(ngModel)]="email.from">
-        </div>
-        <div class="form-group margin-top-20">
-          <label>To</label>
-          <input name="to" type="email" class="form-control" placeholder="name@example.com" [(ngModel)]="email.to">
-        </div>
-        <div class="form-group margin-top-20">
-          <label>Subject</label>
-          <input name="subject" type="email" class="form-control" [(ngModel)]="email.subject">
-        </div>
-        <div class="form-group margin-top-20">
-          <label>Body</label>
-          <textarea name="body" class="form-control" rows="3" [(ngModel)]="email.body"></textarea>
-        </div>
-    </form>
+<div class="container margin-top-20">
+  <div class="d-flex justify-content-between align-items-center">
+    <h1>Email writer form, Matteo Fornara 222727</h1>
+    <button type="button" class="btn btn-outline-primary" routerLink="/list">Back</button>
+  </div>
+  <form>
+      <div class="form-group margin-top-20">
+        <label>From</label>
+        <input name="from" type="email" class="form-control" placeholder="name@example.com" [(ngModel)]="email.from">
+      </div>
+      <div class="form-group margin-top-20">
+        <label>To</label>
+        <input name="to" type="email" class="form-control" placeholder="name@example.com" [(ngModel)]="email.to">
+      </div>
+      <div class="form-group margin-top-20">
+        <label>Subject</label>
+        <input name="subject" type="email" class="form-control" [(ngModel)]="email.subject">
+      </div>
+      <div class="form-group margin-top-20">
+        <label>Body</label>
+        <textarea name="body" class="form-control" rows="3" [(ngModel)]="email.body"></textarea>
+      </div>
+  </form>
 
-    <h3 class="margin-top-20">Up-to-date viewer:</h3>
-    <p class="max-width margin-top-20">
-      From: {{ email.from | lowercase }} <br>
-      To: {{ email.to | lowercase }} <br>
-      Subject: {{ email.subject }} <br>
-      Body: <br>
-    </p>
-    <textarea class="text-area viewer form-control" rows="4" readonly>{{ email.body }}</textarea>
+  <h3 class="margin-top-20">Up-to-date viewer:</h3>
+  <p class="max-width margin-top-20">
+    From: {{ email.from | lowercase }} <br>
+    To: {{ email.to | lowercase }} <br>
+    Subject: {{ email.subject }} <br>
+    Body: <br>
+  </p>
+  <textarea class="text-area viewer form-control" rows="4" readonly>{{ email.body }}</textarea>
 
-    <div class="flex-justify">
-      <button (click)="open(content)" type="button" class="btn btn-primary width-150">Send</button>
-      <button (click)="clean()" type="button" class="btn btn-primary width-150">Clean</button>
-    </div>
+  <div class="flex-justify">
+    <button (click)="open(content)" type="button" class="btn btn-primary width-150">Send</button>
+    <button (click)="clean()" type="button" class="btn btn-primary width-150">Clean</button>
+  </div>
     
 </div>
