--- a/src/app/email-viewer/email-viewer.component.html
+++ b/src/app/email-viewer/email-viewer.component.html
@@ -1,1 +1,27 @@
-<p>{{emailId}}</p>
+
+<div class="container">
+    <div class="d-flex justify-content-between align-items-center">
+        <h1>Email viewer</h1>
+        <button type="button" class="btn btn-outline-primary" routerLink="/list">Back</button>
+    </div>
+    <div class="card">
+        <div class="card-body">
+            <h6 class="card-title margin-top-20">From</h6>
+            <div class="value-container">
+                {{actualEmail?.from}}
+            </div>
+            <h6 class="card-title margin-top-20">To</h6>
+            <div class="value-container">
+                {{actualEmail?.to}}
+            </div>
+            <h6 class="card-title margin-top-20">Subject</h6>
+            <div class="value-container">
+                {{actualEmail?.subject}}
+            </div>
+            <h6 class="card-title margin-top-20">Body</h6>
+            <div class="value-container">
+                {{actualEmail?.body}}
+            </div>
+        </div>
+    </div>
+</div>
