--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,1 +1,4 @@
-<p class="message">404 PAGE NOT FOUND</p>
+<p class="message">
+    404 PAGE NOT FOUND <br>
+    <button type="button" class="btn btn-outline-primary back-btn margin-top-20" routerLink="/list">Back</button>
+</p>
